--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/setup-dotnet@v1.7.2
         with:
           # SDK version to use. Examples: 2.2.104, 3.1, 3.1.x
-          dotnet-version: 3.1.x
+          dotnet-version: 5.0
           
       - name: Build
         shell: bash
