--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,12 +34,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Setup .NET Core SDK
-        uses: actions/setup-dotnet@v1.7.2
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v1
         with:
-          # SDK version to use. Examples: 2.2.104, 3.1, 3.1.x
-          dotnet-version: 5.0
-          
+          dotnet-version: 3.1.101
+
       - name: Build
         shell: bash
         run: |
