--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,7 @@ jobs:
           # tag=$(git describe --tags --abbrev=0)
           release_name="VoteNightBot-${{ matrix.target }}"
           # Build everything
-          ls
-          dotnet publish src/VoteNightBot.csproj --framework netcoreapp3.1 --runtime "${{ matrix.target }}" -c Release -o "$release_name"
+          dotnet publish VoteNightBot/VoteNightBot.csproj --framework netcoreapp3.1 --runtime "${{ matrix.target }}" -c Release -o "$release_name"
           # Pack files
           if [ "${{ matrix.target }}" == "win-x64" ]; then
             # Pack to zip for Windows
