--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Build
         shell: bash
         run: |
-          now=$(date '+%F')
-          tag="Auto-Release - $now"
+          now=$(date '+%F-%T')
+          tag="Auto-Release-$now"
           release_name="VoteNightBot-$tag-${{ matrix.target }}"
           # Build everything
           dotnet publish VoteNightBot/VoteNightBot.csproj --framework netcoreapp3.1 --runtime "${{ matrix.target }}" -c Release -o "$release_name"
