--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         shell: bash
         run: |
           now=$(date '+%F')
-          echo ::set-env name=TAG_NAME::"Auto-Release-$now")
+          echo ::set-env name=TAG_NAME::"Auto-Release-$now"
           release_name="VoteNightBot-$now-${{ matrix.target }}"
           # Build everything
           dotnet publish VoteNightBot/VoteNightBot.csproj --framework netcoreapp3.1 --runtime "${{ matrix.target }}" -c Release -o "$release_name"
